src/objects/Simulation_Note__c.object
<CustomObject>
    <fields>
        <fullName>Actioned__c</fullName>
        <label>Actioned?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Board_Name__c</fullName>
        <formula>Board__r.Board_Title__c</formula>
        <label>Board Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <referenceTo>Boards__c</referenceTo>
        <relationshipLabel>Simulation Notes</relationshipLabel>
        <relationshipName>Simulation_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>TEXT(Board__r.Simulation__r.Business_Unit__c)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compound__c</fullName>
        <formula>Board__r.Simulation__r.Compound__c</formula>
        <label>Compound</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Right__c</fullName>
        <label>Footer Right</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_Level__c</fullName>
        <label>Impact Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quick Win</fullName>
                </value>
                <value>
                    <fullName>Strategic Change</fullName>
                </value>
                <value>
                    <fullName>Avoid</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Magnets__c</fullName>
        <label>Magnets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Content__c</fullName>
        <label>Note Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_TF__c</fullName>
        <externalId>true</externalId>
        <label>Note_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <label>Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Protocol</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <label>Rationale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <label>Responsible Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Actioned__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Prevented Protocol Amendment</fullName>
                </value>
                <value>
                    <fullName>Prevented Protocol Deviation</fullName>
                </value>
                <value>
                    <fullName>Prevented Budget Amendment</fullName>
                </value>
                <value>
                    <fullName>Accelerated Enrollment</fullName>
                </value>
                <value>
                    <fullName>No Effect</fullName>
                </value>
                <value>
                    <fullName>Undesirable Outcome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SimulationNoteId_TF__c</fullName>
        <externalId>true</externalId>
        <label>SimulationNoteId_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simulation_Name__c</fullName>
        <formula>Board__r.Simulation__r.Name</formula>
        <label>Simulation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simulation_Type__c</fullName>
        <formula>TEXT(Board__r.Simulation__r.Simulation_Type__c)</formula>
        <label>Simulation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Alias__c</fullName>
        <formula>Board__r.Simulation__r.Trial_Alias__c</formula>
        <label>Trial Alias</label>
        <type>Text</type>
    </fields>
    <label>Simulation Note</label>
    <listViews>
        <fullName>AZET</fullName>
        <columns>NAME</columns>
        <columns>Note_Content__c</columns>
        <columns>Responsible_Party__c</columns>
        <columns>Impact_Level__c</columns>
        <columns>Comments__c</columns>
        <columns>Magnets__c</columns>
        <columns>Simulation_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Simulation_Name__c</field>
            <operation>contains</operation>
            <value>AZET</value>
        </filters>
        <label>AZET</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Note_Content__c</columns>
        <columns>Impact_Level__c</columns>
        <columns>Simulation_Name__c</columns>
        <columns>Note_Type__c</columns>
        <columns>Responsible_Party__c</columns>
        <columns>NAME</columns>
        <columns>Magnets__c</columns>
        <columns>Board__c</columns>
        <columns>Board_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BIAR</fullName>
        <columns>NAME</columns>
        <columns>Responsible_Party__c</columns>
        <columns>Note_Content__c</columns>
        <columns>Actioned__c</columns>
        <columns>Result__c</columns>
        <columns>Rationale__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Simulation_Name__c</field>
            <operation>equals</operation>
            <value>BIAR External Simulation</value>
        </filters>
        <label>BIAR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IXAA</fullName>
        <columns>NAME</columns>
        <columns>Note_Content__c</columns>
        <columns>Responsible_Party__c</columns>
        <columns>Impact_Level__c</columns>
        <columns>Simulation_Name__c</columns>
        <columns>Magnets__c</columns>
        <columns>Trial_Alias__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Simulation_Name__c</field>
            <operation>contains</operation>
            <value>IXAA</value>
        </filters>
        <label>IXAA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JVCW</fullName>
        <columns>NAME</columns>
        <columns>Note_Content__c</columns>
        <columns>Responsible_Party__c</columns>
        <columns>Impact_Level__c</columns>
        <columns>Magnets__c</columns>
        <columns>Simulation_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trial_Alias__c</field>
            <operation>contains</operation>
            <value>JVCW</value>
        </filters>
        <label>JVCW</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>Note Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simulation Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_Undesirable_Outcome</fullName>
        <active>true</active>
        <errorConditionFormula>AND(INCLUDES(Result__c, &apos;Undesirable Outcome&apos;), Comments__c == NULL)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please mention the reason of selecting Undesirable Outcome</errorMessage>
    </validationRules>
</CustomObject>